@@ -4,8 +4,14 @@
 
 # FriendlyName
 # the name of the server, which will be displayed on the clients
-# if none is specified, it will be set to 'pDLNA v$VERSION on $HOSTNAME'
-#FriendlyName	pDLNA
+# currently the following variables are available
+#  $VERSION  - for instamce 'v1.00.0'
+#  $HOSTNAME - the systems hostname
+#  $OS       - the operating system's name
+# the maximal length of the FriendlyName is limited to 32 characters
+# allowed characters are: letters, numbers, spaces, dots, dashes and underscores
+# if none is specified, it will be set to 'pDLNA $VERSION on $HOSTNAME'
+#FriendlyName	'pDLNA $VERSION on $HOSTNAME'
 
 # Check4Updates
 # specify if pDLNA should check for new updates daily
